--- a/commons/zookeeper/Dockerfile
+++ b/commons/zookeeper/Dockerfile
@@ -16,7 +16,7 @@ RUN echo "$username ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 COPY conf/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # zookeeper install
-ADD http://ftp.ps.pl/pub/apache/zookeeper/stable/zookeeper-$zookeeper_version.tar.gz /tmp
+ADD http://ftp.ps.pl/pub/apache/zookeeper/zookeeper-$zookeeper_version/zookeeper-$zookeeper_version.tar.gz /tmp
 
 RUN tar xzf /tmp/zookeeper-$zookeeper_version.tar.gz -C /opt/
 COPY conf/zoo.cfg /opt/zookeeper-$zookeeper_version/conf
